[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicef-vision"
dynamic = ["version"]
description = ""
readme = "README.rst"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "UNICEF", email = "rapidpro@unicef.org" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django",
    "requests",
]

[project.optional-dependencies]
test = [
    "black",
    "factory-boy",
    "flake8",
    "isort",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
    "responses",
]

[project.urls]
Homepage = "https://github.com/unicef/unicef-vision"

[tool.hatch.version]
path = "src/unicef_vision/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["/src/unicef_vision"]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''
